# gbRender

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  README.org  gbRenderConfig.h.in  note.org  setup.sh
resource/: ElementType.lua  RenderQueue.lua
resource/Entity/: CameraRenderQueue.lua  Config.lua  Default.lua  ElementType.lua
resource/Material/: Config.lua  Default.lua  MultiCameras.lua  SDFText.lua  Tint.lua  tint.lua
resource/Mesh/: Config.lua  Square.lua  triangle.lua
resource/Shader/: Common.lua  Config.lua  Default.gbShader  MultiCameras.gbShader  SDFText.gbShader  Tint.gbShader
src/: Camera.cpp  Camera.h  Config.h  Device.cpp  Device.h  Director.cpp  Director.h  Element.cpp  Element.h  Entity.cpp  Entity.h  EntityPicker.cpp  EntityPicker.h  FPVController.cpp  FPVController.h  GBObject.cpp  GBObject.h  GL.cpp  GL.h  GLDraw.cpp  GLDraw.h  GLTexture.cpp  GLTexture.h  GLVariable.cpp  GLVariable.h  Input.cpp  Input.h  Render.cpp  Render.h  RenderNS.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  (+11 more)
src/data/: Atlas.cpp  Atlas.h  Camera.cpp  Camera.h  DataNS.h  Element.cpp  Element.h  Entity.cpp  Entity.h  EntityPicker.cpp  EntityPicker.h  FPVController.cpp  FPVController.h  Font.cpp  Font.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  atlas.cpp  atlas.h  data.h  font.cpp  font.h  texture.cpp  texture.h
src/file/: FileNS.h  Font.cpp  Font.h  file.h  font.cpp  font.h
src/resource/: Material.h  Mesh.h  Resource.cpp  Resource.h  ResourceNS.h
src/thirdpartylib/glad/include/glad/: glad.h
src/thirdpartylib/glad/src/: glad.c
tools/editor/: CMakeLists.txt
tools/editor/resource/: EditorElementType.lua  scene_0.lua  test_entity.lua  test_mesh.lua
tools/editor/src/: Editor.cpp  Main.cpp  Main.h  NS.h
tools/editor/src/data/: Element.h  Main.cpp  Main.h  NS.h
tools/fontGen/: CMakeLists.txt  build.sh  setup.sh
tools/fontGen/src/: FontGen.cpp  FreetypeLoader.cpp  FreetypeLoader.h  fontGen.cpp  freetypeLoader.cpp  freetypeLoader.h  gbFreeTypeLoader.cpp  gbSDF.cpp
tools/gbFontGen/: CMakeLists.txt  gbFontGen.cpp  gbFreeTypeLoader.h  gbSDF.h
